bk_ida/gccida/c0/mark_stores
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_stores/src/integrate.c:3288:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+30h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_stores/src/integrate.c:3304:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest->fld[0].rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_stores/src/integrate.c:3304:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest->fld[0].rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_stores/src/integrate.c:3306:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_stores/src/integrate.c:3306:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest)); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_stores/src/integrate.c:3351:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_stores/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_stores/src/integrate.c:3352:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v11 = mode_class_0[mode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_stores/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_stores/src/obj/integrate.o] Error 1
